tests/paczka1/fuzzy1/38423958.err
Error in line 8: bsJTLA8vj S790 77,2
Error in line 16: bsJTLA8vj S100 70,1
Error in line 22: S790 S914 53,1
Error in line 6: 9eC6FkOstuW A241 10,8
Error in line 20: bsJTLA8vj A241 72,5
Error in line 33: VNZ S914 11,2
Error in line 36: VNZ A241 19,9
